<resources>
    <string name="app_name">Songle</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="play">Play</string>
    <string name="setting">Settings</string>
    <string name="reset">Reset</string>
    <string name="app_description">Discover Songs Like You Have Never Before</string>
    <string name="listHeader">Select one of the following available puzzles! As you keep progressing, more puzzles will become available!</string>
    <string name="try_again">No Network Connection. Try Again?</string>
    <string name="guess">Guess!</string>
    <string name="progress">Progress: 0/0 Words</string>
    <string name="stat_button">Stats</string>
    <string name="stat_distance">Distance travelled:</string>
    <string name="stat_songs">Songs guessed:</string>
    <string name="stat_calorie">Tentative calories burned:</string>
    <string name="enter_guess">Enter your guess . . .</string>
    <string name="no_words_collected">No words collected yet!</string>
    <string name="collected_words">Collected Words:</string>
    <string name="build_sentence">Try building a sentence... (click words): </string>
    <string name="reset_sentence">Reset Sentence</string>
    <string name="congrats">Congratulations! You guessed correctly!</string>
    <string name="song">Song:</string>
    <string name="artist">Artist:</string>
    <string name="distance_song">Distance covered for this song:</string>
    <string name="video">Video</string>
    <string name="home">Back to Home</string>
    <string name="hint">Get a hint!</string>
    <string name="sentence">Sentence:</string>
    <string name="reset_songs">Reset Game Progress</string>
    <string name="reset_deistance">Reset Distance Stats</string>
    <string name="give_up">Give up?</string>
    <string name="app_intro">Intro</string>
</resources>
